# metamorphic_log

./: .gitignore  .tool-versions  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  checksum-Elixir.MetamorphicLog.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
docs/: verification-guide.md
lib/: metamorphic_log.ex
lib/metamorphic_log/: anchor.ex  checkpoint.ex  commitment.ex  coniks.ex  ingest.ex  keytrans.ex  leaf.ex  native.ex  note.ex  policy.ex  proof.ex  verifier_key.ex
lib/mix/tasks/: metamorphic_log.release.ex
native/metamorphic_log_nif/: Cargo.toml
native/metamorphic_log_nif/src/: lib.rs
test/: anchor_test.exs  coniks_test.exs  cross_language_kat_test.exs  keytrans_construction_test.exs  keytrans_test.exs  policy_directory_test.exs  signing_test.exs
test/support/: vectors.ex
test/support/vectors/: hybrid_kat_note.b64  keytrans_movable_fixtures.exs  namespace_policy_signed.b64
