[package]
name = "metamorphic_log_nif"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
name = "metamorphic_log_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
metamorphic-log = "0.1.4"
# Single source of truth for base64 (same impl used by the engine + WASM SDK),
# so the wire encoding is byte-identical across Rust core / WASM / this NIF.
metamorphic-crypto = "0.9"
